src/drivers/zwo_asi/ASI_SDK_v0.4.0920/include/ASICamera2.h


typedef enum ASI_BAYER_PATTERN{
	ASI_BAYER_RG=0,
	ASI_BAYER_BG,
	ASI_BAYER_GR,
	ASI_BAYER_GB
}ASI_BAYER_PATTERN;
typedef enum ASI_IMG_TYPE{ 
	ASI_IMG_RAW8 = 0,
	ASI_IMG_RGB24,
	ASI_IMG_RAW16,
	ASI_IMG_Y8,
	ASI_IMG_END = -1
}ASI_IMG_TYPE;
typedef enum ASI_GUIDE_DIRECTION{ 
	ASI_GUIDE_NORTH=0,
	ASI_GUIDE_SOUTH,
	ASI_GUIDE_EAST,
	ASI_GUIDE_WEST
}ASI_GUIDE_DIRECTION;
typedef enum ASI_ERROR_CODE{ 
	ASI_SUCCESS=0,
	ASI_ERROR_INVALID_INDEX, 
	ASI_ERROR_INVALID_ID, 
	ASI_ERROR_INVALID_CONTROL_TYPE, 
	ASI_ERROR_CAMERA_CLOSED, 
	ASI_ERROR_CAMERA_REMOVED, 
	ASI_ERROR_INVALID_PATH, 
	ASI_ERROR_INVALID_FILEFORMAT, 
	ASI_ERROR_INVALID_SIZE, 
	ASI_ERROR_INVALID_IMGTYPE, 
	ASI_ERROR_OUTOF_BOUNDARY, 
	ASI_ERROR_TIMEOUT, 
	ASI_ERROR_INVALID_SEQUENCE,
	ASI_ERROR_BUFFER_TOO_SMALL, 
	ASI_ERROR_VIDEO_MODE_ACTIVE,
	ASI_ERROR_EXPOSURE_IN_PROGRESS,
	ASI_ERROR_GENERAL_ERROR,
	ASI_ERROR_END
}ASI_ERROR_CODE;
typedef enum ASI_BOOL{
	ASI_FALSE =0,
	ASI_TRUE
}ASI_BOOL;
typedef struct _ASI_CAMERA_INFO
{
	char Name[64]; 
	int CameraID; 
	long MaxHeight; 
	long MaxWidth;	
	ASI_BOOL IsColorCam; 
	ASI_BAYER_PATTERN BayerPattern;
	int SupportedBins[16]; 
	ASI_IMG_TYPE SupportedVideoFormat[8]; 
	double PixelSize; 
	ASI_BOOL MechanicalShutter;
	ASI_BOOL ST4Port;
	ASI_BOOL IsCoolerCam;
	ASI_BOOL IsUSB3Host;
	ASI_BOOL IsUSB3Camera;
	float ElecPerADU;
	char Unused[24];
} ASI_CAMERA_INFO;
typedef enum ASI_CONTROL_TYPE{ 
	ASI_GAIN = 0,
	ASI_EXPOSURE,
	ASI_GAMMA,
	ASI_WB_R,
	ASI_WB_B,
	ASI_BRIGHTNESS,
	ASI_BANDWIDTHOVERLOAD,	
	ASI_OVERCLOCK,
	ASI_TEMPERATURE,
	ASI_FLIP,
	ASI_AUTO_MAX_GAIN,
	ASI_AUTO_MAX_EXP,
	ASI_AUTO_MAX_BRIGHTNESS,
	ASI_HARDWARE_BIN,
	ASI_HIGH_SPEED_MODE,
	ASI_COOLER_POWER_PERC,
	ASI_TARGET_TEMP,
	ASI_COOLER_ON,
	ASI_MONO_BIN,
	ASI_FAN_ON,
	ASI_PATTERN_ADJUST
}ASI_CONTROL_TYPE;
typedef struct _ASI_CONTROL_CAPS
{
	char Name[64]; 
	char Description[128]; 
	long MaxValue;
	long MinValue;
	long DefaultValue;
	ASI_BOOL IsAutoSupported; 
	ASI_BOOL IsWritable; 
	ASI_CONTROL_TYPE ControlType;
	char Unused[32];
} ASI_CONTROL_CAPS;
typedef enum ASI_EXPOSURE_STATUS {
	ASI_EXP_IDLE = 0,
	ASI_EXP_WORKING,
	ASI_EXP_SUCCESS,
	ASI_EXP_FAILED,
}ASI_EXPOSURE_STATUS;
typedef struct _ASI_ID{
	unsigned char id[8];
}ASI_ID;
#define ASI_CONTROL_TYPE int
#define ASI_BOOL int
#define ASI_ERROR_CODE int
#define ASI_IMG_TYPE int
#define ASI_GUIDE_DIRECTION int
ASICAMERA_API  int ASIGetNumOfConnectedCameras();
ASICAMERA_API ASI_ERROR_CODE ASIGetCameraProperty(ASI_CAMERA_INFO *pASICameraInfo, int iCameraIndex);
ASICAMERA_API  ASI_ERROR_CODE ASIOpenCamera(int iCameraID);
ASICAMERA_API  ASI_ERROR_CODE ASIInitCamera(int iCameraID);
ASICAMERA_API  ASI_ERROR_CODE ASICloseCamera(int iCameraID);
ASICAMERA_API ASI_ERROR_CODE ASIGetNumOfControls(int iCameraID, int * piNumberOfControls);
ASICAMERA_API ASI_ERROR_CODE ASIGetControlCaps(int iCameraID, int iControlIndex, ASI_CONTROL_CAPS * pControlCaps);
ASICAMERA_API ASI_ERROR_CODE ASIGetControlValue(int  iCameraID, ASI_CONTROL_TYPE  ControlType, long *plValue, ASI_BOOL *pbAuto);
ASICAMERA_API ASI_ERROR_CODE ASISetControlValue(int  iCameraID, ASI_CONTROL_TYPE  ControlType, long lValue, ASI_BOOL bAuto);
ASICAMERA_API  ASI_ERROR_CODE ASISetROIFormat(int iCameraID, int iWidth, int iHeight,  int iBin, ASI_IMG_TYPE Img_type);
ASICAMERA_API  ASI_ERROR_CODE ASIGetROIFormat(int iCameraID, int *piWidth, int *piHeight,  int *piBin, ASI_IMG_TYPE *pImg_type);
ASICAMERA_API  ASI_ERROR_CODE ASISetStartPos(int iCameraID, int iStartX, int iStartY);
ASICAMERA_API  ASI_ERROR_CODE ASIGetStartPos(int iCameraID, int *piStartX, int *piStartY);
ASICAMERA_API  ASI_ERROR_CODE ASIStartVideoCapture(int iCameraID);
ASICAMERA_API  ASI_ERROR_CODE ASIStopVideoCapture(int iCameraID);
ASICAMERA_API  ASI_ERROR_CODE ASIGetVideoData(int iCameraID, unsigned char* pBuffer, long lBuffSize, int iWaitms);
ASICAMERA_API ASI_ERROR_CODE ASIPulseGuideOn(int iCameraID, ASI_GUIDE_DIRECTION direction);
ASICAMERA_API ASI_ERROR_CODE ASIPulseGuideOff(int iCameraID, ASI_GUIDE_DIRECTION direction);
ASICAMERA_API ASI_ERROR_CODE  ASIStartExposure(int iCameraID, ASI_BOOL bIsDark);
ASICAMERA_API ASI_ERROR_CODE  ASIStopExposure(int iCameraID);
ASICAMERA_API ASI_ERROR_CODE  ASIGetExpStatus(int iCameraID, ASI_EXPOSURE_STATUS *pExpStatus);
ASICAMERA_API  ASI_ERROR_CODE ASIGetDataAfterExp(int iCameraID, unsigned char* pBuffer, long lBuffSize);
ASICAMERA_API  ASI_ERROR_CODE ASIGetID(int iCameraID, ASI_ID* pID);
ASICAMERA_API  ASI_ERROR_CODE ASISetID(int iCameraID, ASI_ID ID);
ASICAMERA_API ASI_ERROR_CODE ASIGetGainOffset(int iCameraID, int *Offset_HighestDR, int *Offset_UnityGain, int *Gain_LowestRN, int *Offset_LowestRN);